Project.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */

/**
 * SECTION 1: PARSER
 */

options
{
  STATIC = true;
  IGNORE_CASE = true;
}

PARSER_BEGIN(Parser)

public class Parser
{
  public static void main(String args []) throws ParseException
  {
	Parser parser = new Parser(System.in);
    try
    {
		parser.program();
		System.out.println("\nThe program is valid! :)");
    }
    catch (Exception e)
    {
       System.out.println("\nAn exception ocurred!");
       System.out.println(e.getMessage());
       parser.ReInit(System.in);
    }
    catch (Error e)
    {
       System.out.println("\nAn error ocurred!");
       System.out.println(e.getMessage());
    }
  }
}

PARSER_END(Parser)

/**
 * SECTION 2: TOKENS
 */

SKIP :
{
  " " | "\r" | "\t" | "\n" | "\f"
}


TOKEN : /* Keywords */
{
  < ROBOT_R : "robot_r" >
| < VARS : "vars" >
| < PROCS : "procs" >
}

TOKEN : /* Commands */
{
  < assignTo : "assignto" >
| < goTo : "goto" >
| < move : "move" >
| < turn : "turn" >
| < face : "face" >
| < put : "put" >
| < pick : "pick" >
| < moveToThe : "movetothe" >
| < moveInDir : "moveindir" >
| < jumpToThe : "jumptothe" >
| < jumpInDir : "jumpindir" >
| < nop : "nop" >
}

TOKEN : /* Control Structures */
{
  < IF : "if" >
| < THEN : "then" >
| < ELSE : "else" >
| < WHILE : "while" >
| < DO : "do" >
| < REPEAT : "repeat" >
}

TOKEN : /* Conditions */
{
  < facing : "facing" >
| < canPut : "canput" >
| < canPick : "canpick" >
| < canMoveInDir : "canmoveindir" >
| < canJumpInDir : "canjumpindir" >
| < canMoveToThe : "canmovetothe" >
| < canJumpToThe : "canjumptothe" >
| < not : "not" >
}

TOKEN : /* Symbols */
{
  < O_BRACKET : "[" >
| < C_BRACKET : "]" >
| < COMMA : "," >
| < COLON : ":" >
| < SEMICOLON : ";" >
| < V_BAR : "|" >
}

TOKEN : /* Variables */
{
  < LEFT : "left" >
| < RIGHT : "right" >
| < TURN_DIR : "around" >
| < ORIENTATION : "north" | "south" | "east" | "west" >
| < X_OBJECT : "balloons" | "chips" >
| < DIRECTION : "front" | "back" >
| < NUMBER : (<DIGIT>)+ >
| < NAME : <LETTER> (<LETTER> | <DIGIT>)* >
| < #LETTER   : ["a"-"z","A"-"Z"] >
| < #DIGIT : ["0"-"9"] >
}

/**
 * SECTION 3: PRODUCTION RULES
 */

void program() : {} {
	<ROBOT_R> declaration() procedures() blockInstructions() <EOF>
}

void declaration() : {Token var;} {
	<VARS> 
	var = <NAME> {Analyzer.addVariable(var);}
	(<COMMA> var = <NAME> {Analyzer.addVariable(var);})* 
	<SEMICOLON>
}

void procedures() : {} {
  	<PROCS> (procedureDef())+
}

void procedureDef() : {Token function; Token var; int count = 0;} {
	function = <NAME>
	<O_BRACKET>
	<V_BAR> 
	(var = <NAME> {Analyzer.addParam(var); count++;} (<COMMA> var = <NAME> {Analyzer.addParam(var); count++;})*)* 
	<V_BAR>
	instruction() (<SEMICOLON> instruction())*
	<C_BRACKET>
	{Analyzer.addFunction(function, count);} 
}

void blockInstructions() : {} {
	<O_BRACKET>
	instruction() (<SEMICOLON> instruction())*
	<C_BRACKET>
}

void instruction() : {} {
	command() | procedureCall() | controlStructure() 
}

void command() : {Token number; Token var;} {
  	//toThe -> Direction, inDir -> Orientation
	<assignTo> <COLON> number = <NUMBER> <COMMA> var = <NAME> {Analyzer.assignVariable(number, var);}
	| <goTo> <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);})
	| <move> <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);})
	| <turn> <COLON> (<LEFT> | <RIGHT> | <TURN_DIR>)
	| <face> <COLON> <ORIENTATION>
	| (<put> | <pick>) <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> <X_OBJECT>
	| (<moveToThe> | <jumpToThe>) <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> (<LEFT> | <RIGHT> | <DIRECTION>)
	| (<moveInDir> | <jumpInDir>) <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> <ORIENTATION>
	| <nop> <COLON>
}

void procedureCall() : {Token function; Token var; int count = 0;} {
	function = <NAME> <COLON> 
	((<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) {count++;} (<COMMA> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) {count++;})*)*
	{Analyzer.checkFunction(function, count);}
}

void controlStructure() : {Token var;} {
	<IF> <COLON> condition() <THEN> <COLON> blockInstructions() <ELSE> <COLON> blockInstructions()
	| <WHILE> <COLON> condition() <DO> <COLON> blockInstructions() 
	| <REPEAT> <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) blockInstructions() 
}

void condition() : {Token var;} {
  	//toThe -> Direction, inDir -> Orientation
	<facing> <COLON> <ORIENTATION>
	| (<canPut> | <canPick>) <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> <X_OBJECT>
	| (<canMoveInDir> | <canJumpInDir>) <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> <ORIENTATION>
	| (<canMoveToThe> | <canJumpToThe>) <COLON> (<NUMBER> | var = <NAME> {Analyzer.checkVariable(var);}) <COMMA> (<LEFT> | <RIGHT> | <DIRECTION>)
	| <not> <COLON> condition()
}
